--- a/css/nuworldcup.css
+++ b/css/nuworldcup.css
@@ -29,8 +29,24 @@ body {
 .main-logo {
     padding-top: 4em;
     width: 40%;
-
     margin-left:30%;
+    margin-bottom: 7em;
+}
+
+.vid-container {
+    width:70%;
+/*    position: relative;*/
+    margin: auto;
+    text-align: center;
+}
+
+iframe {
+    border-style: none;
+/*    margin:auto;*/
+    padding:3rem;
+    width:100%;
+    height:40em;
+/*    position:relative;;*/
 }
 
 .navbar {
@@ -139,6 +155,9 @@ footer {
     .img-related {
         margin-bottom: 30px;
     }
+    iframe {
+        height:30em;
+    }
 }
 
 @media(max-width: 900px) {
@@ -149,6 +168,9 @@ footer {
     
     .navbar-nav {
         font-size: 12px;
+    }
+    iframe {
+        height:26em;
     }
 }
 
@@ -164,5 +186,8 @@ footer {
 
     header.carousel .carousel {
         height: 70%;
+    }
+    .vid-container {
+        display:none;
     }
 }
