registration page, faq page, home page video

--- a/css/about.css
+++ b/css/about.css
@@ -1,10 +1,10 @@
 #about {
-	background: url("../img/about-bg.jpg");
+/*	background: url("../img/about-bg.jpg");*/
 	background-size: length;
 }
 
 #gonzo {
-	background: url("../img/gonzo-bg.jpg");
+/*	background: url("../img/gonzo-bg.jpg");*/
 	background-size: length;
 }
 
