--- a/css/nuworldcup.css
+++ b/css/nuworldcup.css
@@ -26,6 +26,10 @@ body {
     -o-background-size: cover;
 }
 
+.home-content {
+    background-color: rgb(26,24,25);
+}
+
 .main-logo {
     padding-top: 4em;
     width: 40%;
@@ -45,7 +49,8 @@ iframe {
 /*    margin:auto;*/
     padding:3rem;
     width:100%;
-    height:40em;
+    height: 10488px; /*Specific for 2017 Wicked World Cup*/
+
 /*    position:relative;;*/
 }
 
