--- a/css/nuworldcup.css
+++ b/css/nuworldcup.css
@@ -46,8 +46,8 @@ body {
 
 .main-logo {
     padding-top: 5em;
-    width: 40%;
-    margin-left:30%;
+    width: 36%; /* 40% */
+    margin-left:32%; /* 30% */
     margin-bottom: 7em;
 }
 
